******************************************************************************

   The following changes are made in v1.4, r4.0.1.


******************************************************************************

********************************
January 29, 1997: Lennert Sloth

1) guienv_nti.c: 
  - updateAccelTable, deleteAccel: No longer calls CreateAcceleratorTable with
    empty accel list.
  - New function: getOsMajorVersionId.

2) scrolllists.bet: 
   - scrollListDelete: Initial values of "min" and "upper" was wrong.

3) controls_ntibody.bet: 
   Now delegates font changes to the dropDown list.
   - optionbutton.open: 
	(dropDownListID,WM_SETFONT,theTextStyle.textStyleID,1) -> SendMessage;

   - GUIENVoptionButtonOnStyleChanged:
        (dropDownListID,WM_SETFONT,theTextStyle.textStyleID,1) ->SendMessage;


4) guienv_ntibody.bet: 
   - Now detects if too much text is entered into a textfield.
     (if type=EN_MAXTEXT then
   - processWM_CTLCOLORBTN and processWM_CTLCOLORSTATIC are
     new in GUIENVwindowItemMethodsdispatchMessage. They see to that
     the background color of controls are the same as their canvas.


5) guienv_ntibody.bet
   - Interface to getOsMajorVersionId.

6) graphics_ntibody.bet: 
   - Now use penstyle: PS_INSIDEFRAME. 
   - Deleted getOsVersionId. It was also in guienv_ntiprivate.bet

7) fields_ntibody.bet: 
   - Removed processScroll.


8) stddialogs_ntibody.bet: On win32 you cannot set "label". Before
   label was used to set the default filename. This has been
   corrected. "fileName" is now used for that.



********************************
January 28, 1997: Peter Andersen

Renamed files with long file names:

demo/windowWithStandardMenubar.bet
	-> demo/windowWithStdMenubar.bet
private/winnt/optionbutton_ntiprivate.bet
	-> private/winnt/optionbutton_nti.bet
utils/private/X11/movabletextfieldX11body.bet
	-> utils/private/X11/movabletextfield_X11.bet
utils/private/macintosh/movabletextfield_macbody.bet