@@ -7,7 +7,11 @@ origin: (# exit 2->getNodeAttribute #);
 -- descriptorFormAttributes: Attributes --
 descNo: (# exit 1->getAttribute #);
 origin: (# exit 2->getNodeAttribute #);
-originOff: (# exit 8->getNodeAttribute #);
+originOff: 
+  (# off: @integer 
+  do 1 -> frag.a[index+offset.attribute+7].%getShort -> off
+  exit off
+  #);
 size: (# exit 3->getAttribute #);
 attSize: (# exit 4->getAttribute #);
 kind: (# exit 5->getAttribute #);
@@ -83,7 +87,11 @@ findDescriptor:
 -- objectDescriptorAttributes: Attributes --
 descNo: (# exit 1->getAttribute #);
 origin: (# exit 2->getAttribute->frag.indexToNode #);
-originOff: (# exit 8->getAttribute #);
+originOff: 
+  (# off: @integer 
+  do 1 -> frag.a[index+offset.attribute+7].%getShort -> off
+  exit off
+  #);
 size: (# exit 3->getAttribute #);
 attSize: (# exit 4->getAttribute #);
 kind: (# exit 5->getAttribute #);
