@@ -47,8 +47,8 @@ graphics:
             (* The transfer mode use specifies how new graphics are
              * mixed with the graphics already in the window
              *)
-            (# m: ^transferMode;
-            enter m[]
+            (# m: @integer;
+            enter m
             do <<SLOT GUIENVgraphicsPenMode: descriptor>>
             #);
        #);
