@@ -1541,16 +1541,15 @@ GUIenv:
             do <<SLOT GUIENVsystemWaitBody: descriptor>>;
             #);
        #) (* system *);
-     transferMode: (#  #);
      transferModes: @
-       (# copy,
-          invertCopy,
-          erase,
-          andBlend,
-          orBlend,
-          xorBlend,
-          notAndBlend,
-          notOrBlend: @transferMode;
+       (# copy: (# exit 0 #);
+          invertCopy: (# exit 1 #);
+          erase: (# exit 2 #);
+          andBlend: (# exit 3 #);
+          orBlend: (# exit 4 #);
+          xorBlend: (# exit 5 #);
+          notAndBlend: (# exit 6 #);
+          notOrBlend: (# exit 7 #);
        #);
      textFaces: @
        (# <<SLOT textFacesLib: attributes>>;
