@@ -5,6 +5,8 @@ Include 'widget';
 Include 'raster_unixbody';
 Include 'guienvattributes';
 INCLUDE 'guienv_unixprivate';
+INCLUDE '~beta/sysutils/v1.5/objinterface';
+
 [[
 -- guienvLib: attributes --
 
@@ -90,23 +92,26 @@ do (if b[]=patterns.black[] then
 (# xmode: @integer;
    mask: @integer;
 do 0 -> TOS'%not' -> mask;
-   
-   (if m[]
-    //transferModes.copy[] then GXCopy -> xmode;
-    //transferModes.orBlend[] then GXOr -> xmode;
-    //transferModes.xorBlend[] then 
-       GXxor  -> xmode; 
-       (whitePixelValue,blackPixelValue) -> TOS'%xor' -> mask;
-    //transferModes.andBlend[] then GXAnd -> xmode;
-    //transferModes.erase[] then  GXAndInverted -> xmode;
-    //transferModes.invertCopy[] then GXCopyInverted -> xmode;
-    //transferModes.notAndBlend[] then GXnand -> xmode;
-    //transferModes.notOrBlend[] then  GXnor -> xmode;
+   (if m
+    // transferModes.xorBlend then
+       GXinvert  -> xmode; 
+       whitePixelValue %bxor blackPixelValue -> mask;
+    // transferModes.copy then 
+       GXCopy -> xmode;
+    // transferModes.orBlend then 
+       GXOr -> xmode;
+    // transferModes.andBlend then
+       GXAnd -> xmode;
+    // transferModes.erase then
+       GXAndInverted -> xmode;
+    // transferModes.invertCopy then
+       GXCopyInverted -> xmode;
+    // transferModes.notAndBlend then
+       GXnand -> xmode;
+    // transferModes.notOrBlend then 
+       GXnor -> xmode;
    if);
-   (private.display,private.gc,xmode) -> XSetFunction;
-   (private.display,private.gc,mask) -> XSetPlaneMask;
-   (private.display,private.gc,0) -> XSetBackGround;
-   (private.display,private.gc,0 -> TOS'%not') -> XSetForeGround;
+   (private.display, private.gc,0,1,xmode,mask) -> XSetState;
 #)
 
 -- GUIENVgraphicsStyle: descriptor --
