@@ -1,11 +1,14 @@
 ORIGIN 'guienv_unixprivate';
-MAKE default 'external/makefile';
-OBJFILE default 
-'$/guienv_unix.o' 
-'$/Canvas.o' 
-'$/Button.o' 
-'$/IconButton.o'
-'$/ToggleButton.o';
+BUILD default '$$/guienv_unix.o' 'external/guienv_unix.c' 
+      '$CC -D$$ -I/usr/include -I$MOTIFINC -c -o $0 $1';
+BUILD default '$$/Canvas.o' 'external/Canvas.c' 
+      '$CC -D$$ -I/usr/include -I$MOTIFINC -c -o $0 $1';
+BUILD default '$$/Button.o' 'external/Button.c' 
+      '$CC -D$$ -I/usr/include -I$MOTIFINC -c -o $0 $1';
+BUILD default '$$/IconButton.o' 'external/IconButton.c' 
+      '$CC -D$$ -I/usr/include -I$MOTIFINC -c -o $0 $1';
+BUILD default '$$/ToggleButton.o' 'external/ToggleButton.c' 
+      '$CC -D$$ -I/usr/include -I$MOTIFINC -c -o $0 $1';
 BODY 'develop';
 INCLUDE '~beta/Xt/v1.9/events';
 INCLUDE '~beta/sysutils/v1.5/cstring';
@@ -2926,7 +2929,7 @@ do (if widgetID <> 0 then
 (# 
 do father.graphics
    (# r: @rectangle;
-   do transferModes.xorBlend[] -> pen.mode;
+   do transferModes.xorBlend -> pen.mode;
       father.trackMouse
       (# r: @rectangle;
          mousePress::<
