@@ -43,17 +43,17 @@ do	(if b.isPixPat//true then
 
 -- GUIENVgraphicsPenMode: descriptor --
 (# qdMode: @integer;
-do (if m[]
-		//transferModes.copy[] then srcCopy -> qdMode;
-      //transferModes.invertCopy[] then notSrcCopy -> qdMode;
-		//transferModes.erase[] then srcBic -> qdMode;
-		//transferModes.andBlend[] then 0 -> qdMode;
-		//transferModes.orBlend[] then srcOr -> qdMode;
-		//transferModes.xorBlend[] then srcXor -> qdMode;
-		//transferModes.notAndBlend[] then 0 -> qdMode;
-		//transferModes.notOrBlend[] then notSrcOr -> qdMode;
-	if);
-	qdMode -> PenMode;
+do (if m
+    //transferModes.copy then srcCopy -> qdMode;
+    //transferModes.invertCopy then notSrcCopy -> qdMode;
+    //transferModes.erase then srcBic -> qdMode;
+    //transferModes.andBlend then 0 -> qdMode;
+    //transferModes.orBlend then srcOr -> qdMode;
+    //transferModes.xorBlend then srcXor -> qdMode;
+    //transferModes.notAndBlend then 0 -> qdMode;
+    //transferModes.notOrBlend then notSrcOr -> qdMode;
+   if);
+   qdMode -> PenMode;
 #)
 
 -- GUIENVgraphicsStyle: descriptor --
