@@ -215,7 +215,7 @@ drawControlPoints: father.graphics
      oldPenMode: @integer;
      hRgn: @integer;
   do getGraphicsHdc -> GetROP2 -> oldPenMode;
-     transferModes.xorBlend[] -> Pen.mode;  
+     transferModes.xorBlend-> Pen.mode;  
      start ->  square -> fillRect;
      end -> square -> fillRect;
      (getGraphicsHdc, oldPenMode) -> SetROP2; 
@@ -342,7 +342,7 @@ drawControlPoints: father.graphics
      w,h: @integer;
      oldPenMode: @integer;
   do getGraphicsHdc -> GetROP2 -> oldPenMode;
-     transferModes.xorBlend[] -> Pen.mode;  
+     transferModes.xorBlend-> Pen.mode;  
       
      patterns.black[] -> pen.stipple;
      frame -> f;
