@@ -168,14 +168,14 @@ do b[] -> private.theStipple[];
 
 -- GUIENVgraphicsPenMode: descriptor --
 (# 
-do (if m[]=transferModes.copy[] then R2_COPYPEN -> private.graphicsPenMode; if);
-   (if m[]=transferModes.invertCopy[] then R2_NOTCOPYPEN -> private.graphicsPenMode; if);
-   (if m[]=transferModes.erase[] then R2_NOT -> private.graphicsPenMode; if);
-   (if m[]=transferModes.andBlend[] then R2_MASKPEN -> private.graphicsPenMode; if);
-   (if m[]=transferModes.orBlend[] then R2_MERGEPEN -> private.graphicsPenMode; if);
-   (if m[]=transferModes.xorBlend[] then R2_NOTXORPEN -> private.graphicsPenMode; if);
-   (if m[]=transferModes.notAndBlend[] then R2_MASKNOTPEN -> private.graphicsPenMode; if);
-   (if m[]=transferModes.notOrBlend[] then R2_MERGENOTPEN -> private.graphicsPenMode; if);
+do (if m=transferModes.copy then R2_COPYPEN -> private.graphicsPenMode; if);
+   (if m=transferModes.invertCopy then R2_NOTCOPYPEN -> private.graphicsPenMode; if);
+   (if m=transferModes.erase then R2_NOT -> private.graphicsPenMode; if);
+   (if m=transferModes.andBlend then R2_MASKPEN -> private.graphicsPenMode; if);
+   (if m=transferModes.orBlend then R2_MERGEPEN -> private.graphicsPenMode; if);
+   (if m=transferModes.xorBlend then R2_NOTXORPEN -> private.graphicsPenMode; if);
+   (if m=transferModes.notAndBlend then R2_MASKNOTPEN -> private.graphicsPenMode; if);
+   (if m=transferModes.notOrBlend then R2_MERGENOTPEN -> private.graphicsPenMode; if);
    (private.hdc, private.graphicsPenMode) -> SetROP2;
 #)
 
