@@ -21,7 +21,7 @@ do
          MousePress::
            (#
            do Patterns.gray[] -> Pen.stipple; 
-              TransferModes.xorBlend[] -> Pen.mode;
+              TransferModes.xorBlend -> Pen.mode;
               2 -> pen.size;
               theRect -> drawRect;
            #);
