@@ -20,7 +20,7 @@ do graphics
               (if doLeft then 1 -> leftWeight; if);
               (if doRight then 1 -> rightWeight; if);
               (if doBottom then 1 -> bottomWeight; if);
-              transferModes.xorBlend[] -> pen.mode;
+              transferModes.xorBlend -> pen.mode;
               false -> clipChildren;
               r[] -> drawRect;
            #);
