@@ -115,7 +115,7 @@ panecanvas: canvas
                    (# 
                    do FALSE->clipChildren; 
                       patterns.black[]->Pen.stipple; 
-                      TransferModes.xorBlend[]->Pen.mode;
+                      TransferModes.xorBlend->Pen.mode;
                       2->pen.size;
                       father.father.trackmouse
                       (# draw: @
