@@ -1,0 +1,8 @@
+OLM: 1.12.96:	Added corrections originally made in betaast/v5.2/index.bet to
+		store an additional filed, returnOff together with originOff in
+		the same 32-bit integer field.
+		After this betaast/v5.2 should now be obsolete.
+ 
+
+PA: 26.2.97:	Made the same corrections in originOff calculations in
+		betasematt (!)
