@@ -1,5 +1,16 @@
 ******************************************************************************
 
+   The following changes are made in v1.4, r4.0.2.
+
+
+******************************************************************************
+
+1) Introduced use of BUILD instead of MAKE+OBJFILE in implementation
+
+2) transfermode changed to constants instead of objects.
+
+******************************************************************************
+
    The following changes are made in v1.4, r4.0.1.
 
 
